kubernetes/apps/network/bmc-cert-updater-asrock/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bmc-cert-updater-asrock
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bmc-cert-updater-asrock
      app.kubernetes.io/instance: bmc-cert-updater-asrock
  egress:
    - toCIDR:
        - 10.1.20.13/32
        - 10.1.20.11/32
      toEntities:
        - host
        - cluster
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
